clients/atlas-tui/tests/snapshots/golden_settings__news__the_news_card_renders_armed_at_120x36.snap
---
source: tests/golden_settings.rs
expression: "client.frame(120, 36)"
---
" ACWI 152.47 ▼1.34%   SPY 729.46 ▼1.54%   QQQ 661.73 ▼2.04%   XLK 285.24 ▼2.08%   XLF 52.40 ▲1.24%   ACWI 152.47 ▼1.34% "
" 1 ATLAS│▌ DESK                               ▌ NEWS                                  │▌ PULSE                          "
" 2 DESK │ mode         SYNTHETIC               lane         live                      │ desk stress  …                  "
" 3 MKTS │ data         synthetic               stack        macro rss                 │ regime CALM  robust UNCERTAIN   "
" 4 BOOK │ book         simulated               ▸ [ ] alpaca  secondary needs an Alpac…│ drawdown 0.0%  tier NONE        "
" 5 RSCH │ lane         offline · synthetic       [ ] edgar   primary   needs QLAB_EDG…│ gross 100.0%                    "
" 6 PRED │ alpaca login no ALPACA_API_KEY_ID      [x] macro   primary   ok             │                                 "
" 7 WORK │in the environment or .env              [x] rss     secondary rss feed retur…│▌ BREADTH                        "
" 8 AUDIT│                                        [ ] gdelt   wide      global coverag…│ ███████████████████████████████ "
"▌9 SETT │                                      needs an Alpaca credential             │ adv 1 / dec 4                   "
"        │────────────────────────────────────  space · c contact · s save · v verify ─│                                 "
"        │▌ METHOD                               ▌ SYSTEM                              │▌ MOVERS                         "
"        │ nothing has said how this desk solves  desk         paper                   │ ▲ best  XLF    +1.24%           "
"        │                                        provenance   synthetic · 0 d         │ ▼ worst XLK    -2.08%           "
"        │                                        claude       available               │                                 "
"        │                                        mcp          qlab-operator           │▌ REGIME                         "
"        │                                        proxy        available               │ … waiting for the regime panel  "
"        │                                        workforce    available               │                                 "
"        │                                        authority    propose_only            │                                 "
"        │────────────────────────────────────── ──────────────────────────────────────│                                 "
"        │▌ POLICY                               ▌ MODELS                              │                                 "
"        │ policy       hrp                       probed       12s ago                 │                                 "
"        │ method       Hierarchical risk parity  reasoner     ollama · qwen2.5:7b     │                                 "
"        │ algorithm    hrp                       judgment     on                      │▌ ATLAS READ                     "
"        │ objective    hrp                       workforce    claude · tiers decide   │ state      STRESS               "
"        │ solver       hrp                                                            │ agreement  ALIGNED              "
"        │ long only    yes                                                            │ conviction 84.0%                "
"        │ budget       100.0%                                                         │ news       alpaca               "
"        │ per asset    0.0% – 40.0%                                                   │─────────────────────────────────"
"        │────────────────────────────────────── ──────────────────────────────────────│ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ Current evidence favors the robust    ▌ UNIVERSE                            │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │HRP benchmark out of sample; MVSK       watching     7 symbols               │ ⠤⢄⣀⣀⣀⠤⠔⠊⠉⠉⠉⠒                    "
"        │▌ THEME                                 ACWI SPY QQQ XLK XLF BNDW DUST       │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │ palette      obsidian · truecolor                                           │ ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀                    "
"        │────────────────────────────────────── ──────────────────────────────────────│ WATCHING                        "
" /command …   http://127.0.0.1:8765                                   ● SSE  ● OWNER  SYNTHETIC  propose·auto  OPERATOR "
